dropshot/tests/fail/bad_server_invalid_method_kinds.stderr
error: endpoint `with_type_param` must not have generics
  --> tests/fail/bad_server_invalid_method_kinds.rs:12:29
   |
12 |     async fn with_type_param<T: Send + Sync + JsonSchema + 'static>(
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: endpoint `with_const_param` must not have generics
  --> tests/fail/bad_server_invalid_method_kinds.rs:18:30
   |
18 |     async fn with_const_param<const N: usize>(
   |                              ^^^^^^^^^^^^^^^^

error: endpoint `many_things_wrong` must be async
  --> tests/fail/bad_server_invalid_method_kinds.rs:47:5
   |
47 |     fn many_things_wrong(rqctx: RequestContext<Self::Context>);
   |     ^^

error: endpoint `many_things_wrong` must return a Result
  --> tests/fail/bad_server_invalid_method_kinds.rs:47:5
   |
47 |     fn many_things_wrong(rqctx: RequestContext<Self::Context>);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> tests/fail/bad_server_invalid_method_kinds.rs:5:5
  |
5 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
